bash_tutorial/a.txt
  File "aa.py", line 1
    asda f+ 1213
         ^
SyntaxError: invalid syntax
